refactoring and added formControl

--- a/src/app/password/password.component.html
+++ b/src/app/password/password.component.html
@@ -1,11 +1,16 @@
 <div class="card">
   <label for="password">Password</label>
   <div class="field">
-    <input type="{{ isShowPassword ? 'text' : 'password' }}" id="password" (keyup)="handleEnterPassword()" [(ngModel)]="password"/>
+    <input
+      type="{{ isShowPassword ? 'text' : 'password' }}"
+      id="password"
+      [formControl]="passwordValue"
+      (keyup)="handleEnterPassword()"
+    />
     <button class="{{'eye-btn ' + (isShowPassword ? 'visible' : 'hide')}}" (click)="handleShowPassword()"></button>
   </div>
   <ul class="list">
-    @for (item of messageList; track item.className) {
+    @for (item of messageList; track item.message) {
       <li class="{{ item.className }}">{{ item.message }}</li>
     }
   </ul>
